--- a/riverviewlot.html
+++ b/riverviewlot.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<h1><a href="#">Marist Parking App</a></h1>
+<h1><a href="https://cschudmak1.github.io/SD330//parking.html">Marist Parking App</a></h1>
 
 <div id="parkingStatus"></div>
 
